--- a/module-api/build.gradle
+++ b/module-api/build.gradle
@@ -23,8 +23,13 @@ dependencies {
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+    implementation project(':module-common')    // root project -> settings.gradle 에 선언한 값과 동일해야 함
+
 }
 
 tasks.named('test') {
     useJUnitPlatform()
 }
+
+tasks.register("prepareKotlinBuildScriptModel") {}
